--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+    <div>🥁</div>
     <div id="like_button_container"></div>
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
