--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  </head>
   <body>
     <div>🥁</div>
     <div id="like_button_container"></div>
